--- a/src/vs/workbench/contrib/notebook/browser/media/notebook.css
+++ b/src/vs/workbench/contrib/notebook/browser/media/notebook.css
@@ -448,22 +448,13 @@
 	cursor: pointer;
 }
 
-.monaco-workbench .notebookOverlay .cell-statusbar-container .cell-language-picker {
-	cursor: pointer;
-}
-
 .monaco-workbench .notebookOverlay .cell-statusbar-container .cell-run-duration {
 	margin-right: 8px;
 }
 
-.monaco-workbench .notebookOverlay .cell-statusbar-container .cell-run-duration,
-.monaco-workbench .notebookOverlay .cell-statusbar-container .cell-status-message {
+.monaco-workbench .notebookOverlay .cell-statusbar-container .cell-run-duration {
 	display: flex;
 	align-items: center;
-}
-
-.monaco-workbench .notebookOverlay .cell-statusbar-container .cell-status-message {
-	margin-right: 6px;
 }
 
 .monaco-workbench .notebookOverlay .cell-statusbar-container .cell-run-status {
