--- a/src/vs/workbench/contrib/welcome/gettingStarted/browser/gettingStarted.css
+++ b/src/vs/workbench/contrib/welcome/gettingStarted/browser/gettingStarted.css
@@ -412,12 +412,13 @@
 	display: grid;
 
 	grid-template-columns: minmax(auto, 400px) 1fr;
-	grid-template-rows: minmax(40px, 20%) 100px 1fr;
+	grid-template-rows: minmax(40px, 20%) 100px 1fr minmax(40px, 20%);
 	grid-column-gap: 20px;
 	grid-template-areas:
-	"back ."
-	"title ."
+	"back img"
+	"title img"
 	"tasks img"
+	". img"
 	;
 }
 
@@ -454,7 +455,7 @@
 .monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlideDetails .gettingStartedDetailsContent > .getting-started-media {
 	grid-area: img;
 }
-.monaco-workbench .part.editor > .content .gettingStartedContainer.width-semi-constrained .gettingStartedSlideDetails .gettingStartedDetailsContent > .getting-started-media {
+.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlideDetails .gettingStartedDetailsContent > .getting-started-media {
 	align-self: center;
 }
 
