--- a/src/vs/workbench/contrib/welcome/gettingStarted/browser/gettingStarted.css
+++ b/src/vs/workbench/contrib/welcome/gettingStarted/browser/gettingStarted.css
@@ -412,7 +412,7 @@
 	display: grid;
 
 	grid-template-columns: minmax(auto, 400px) 1fr;
-	grid-template-rows: minmax(40px, 20%) 100px 1fr minmax(40px, 20%);
+	grid-template-rows: minmax(40px, 20%) 100px max-content minmax(40px, 20%);
 	grid-column-gap: 20px;
 	grid-template-areas:
 	"back img"
