Truncate the long terminal title

--- a/src/vs/base/browser/ui/actionbar/actionbar.css
+++ b/src/vs/base/browser/ui/actionbar/actionbar.css
@@ -17,6 +17,11 @@
 	align-items: center;
 }
 
+.monaco-action-bar .actions-container .label-text{
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 .monaco-action-bar.vertical .actions-container {
 	display: inline-block;
 }
@@ -27,6 +32,10 @@
 	justify-content: center;
 	cursor: pointer;
 	position: relative;  /* DO NOT REMOVE - this is the key to preventing the ghosting icon bug in Chrome 42 */
+}
+
+.monaco-action-bar .action-item:first-child {
+	min-width: 0;
 }
 
 .monaco-action-bar .action-item.disabled {
